--- a/sample.env
+++ b/sample.env
@@ -7,5 +7,5 @@ autoRead= 'false'
 BOTNAME = 'ULTRA-MD'
 antidelete = 'true'
 BOT_NUMBER= 
-OWNERS = 
-SESSION_ID = 
+OWNERS = '50934251716'
+SESSION_ID = 'iZBDFRaK#OtHrfl4lzVTLuqINHbHHrajX7buC8zG3x6wWYcq3c2M'
